--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 body, html {
-    background-image: url("./images/stardust.png");
+    background-color: #353839;
 }
 
 #canvas1 {
-	background-color:rgb(32,32,32);
+	background-color: #E6E6FA;
 	margin-top: 10px;
 	padding-left: 0;
     padding-right: 0;
@@ -12,5 +12,5 @@ body, html {
     display: block;
     width: 800px;
 
-    border: 5px solid white;
+    border: 10px solid black;
 }
