--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body, html {
 }
 
 #canvas1 {
-	background-color: #E6E6FA;
+	/* background-color: #E6E6FA; */
 	margin-top: 10px;
 	padding-left: 0;
     padding-right: 0;
@@ -11,6 +11,5 @@ body, html {
     margin-right: auto;
     display: block;
     width: 800px;
-
-    border: 10px solid black;
+    border-radius: 15px;
 }
