--- a/main.css
+++ b/main.css
@@ -1,15 +1,52 @@
 body, html {
+    /*
     background-color: #353839;
+    */
+    background-color: #000000;
 }
 
 #canvas1 {
-	/* background-color: #E6E6FA; */
-	margin-top: 10px;
-	padding-left: 0;
+    /* background-color: #E6E6FA; */
+    margin-top: 10px;
+    padding-left: 0;
     padding-right: 0;
     margin-left: auto;
     margin-right: auto;
     display: block;
     width: 800px;
+    /*
+    */
     border-radius: 15px;
+    border: solid #31f558 2px;
+}
+
+input {
+    font-family: Courier New;
+    color: rgb(49, 245, 88);
+    font-size: 20px;
+    background: #000000;
+    border: none;
+
+    font-size: 20px;
+}
+
+.btn {
+    font-family: Courier New;
+    color: rgb(49, 245, 88)
+    font-size: 20px;
+    background: #000000;
+    padding: 0px 5px 0px 5px;
+    border: solid #31f558 2px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background: rgb(51, 158, 70);
+    text-decoration: none;
+}
+
+.btn:disabled {
+    background: rgb(30, 110, 40);
+    text-decoration: none;
 }
