--- a/main.css
+++ b/main.css
@@ -45,3 +45,13 @@ input {
     background: rgb(30, 110, 40);
     text-decoration: none;
 }
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    color: rgb(49, 245, 88);
+    font-family: Courier New;
+    text-align: center;
+}
+
